src/main/kubernetes/manifests/phr-cpc/combined.yaml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: ph
    namespace: ph
  status:
    phase: Active
- apiVersion: v1
  kind: Service
  metadata:
    name: phr-cpc-service
    namespace: ph
    labels:
      app: phr-cpc
      version: ${project.version}
      group: de.dicos.ph.rest.cpc
  spec:
    ports:
    - port: 8080
    selector:
      app: phr-cpc
      group: de.dicos.ph.rest.cpc
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: phr-cpc
    namespace: ph
    annotations:
      configmap.reloader.stakater.com/reload: "cm-dmz-apache-conf,cm-dmz-apache-modulesd"
    labels:
      app: phr-cpc
      version: ${project.version}
      group: de.dicos.ph.rest.cpc
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: phr-cpc
        group: de.dicos.ph.rest.cpc
    template:
      metadata:
        labels:
          app: phr-cpc
          version: ${project.version}
          group: de.dicos.ph.rest.cpc
        namespace: ph
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: HOSTNAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          image: docker.da.dicos.de/ph/phr-cpc@${image_digest}
          imagePullPolicy: IfNotPresent
          name: phr-cpc-app
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          securityContext:
            privileged: false
          volumeMounts:
          - mountPath: /config/ph
            name: config-ph
          - mountPath: /config/phr-cpc
            name: config-phr-cpc
        volumes:
        - name: config-ph
          configMap:
            name: ph-config
            items:
            - key: ph.properties
              path: ph.properties
        - name: config-phr-cpc
          configMap:
            name: phr-cpc-config
            items:
            - key: phr-cpc.properties
              path: phr-cpc.properties
