src/main/kubernetes/manifests/phr-cpc/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: phr-cpc
    version: ${project.version}
    group: de.dicos.ph.rest.cpc
  name: phr-cpc-ingress
  namespace: ph
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: phr-cpc-service
          servicePort: 8080
        path: /phr-cpc
